[tool.poetry]
name = "span"
version = "0.1.0"
description = "tool to measure the short term memory"
authors = ["fwerj <glimpseunderline@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "*"
fire = "*"

# [tool.poetry.dev-dependencies]
# pytest = "^3.0"
[tool.poetry.scripts]
span = "span:_main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
